Fix tooltip positioning in RadialMap

The tooltip position was incorrect when shown on the edge of second screen.

BUG: 417162